<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_login_back"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="373dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#673AB7"
        android:paddingStart="40dp"
        android:text="@string/name_str"
        android:textColor="#673AB7"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#673AB7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="33dp"
        android:background="@android:color/transparent"
        android:src="@drawable/register_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#673AB7"
        android:paddingStart="40dp"
        android:text="@string/pwd_str"
        android:textColor="#673AB7"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#673AB7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#673AB7"
        android:paddingStart="40dp"
        android:text="@string/email_str"
        android:textColor="#673AB7"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#673AB7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>
