<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/place_description_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/place_title"
        android:layout_width="183dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="16dp"
        android:text="@string/place_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/place_full_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_from_full_info"
        android:layout_width="256dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="303dp"
        android:background="#009688"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:src="@drawable/back_btn"
        app:layout_constraintBottom_toTopOf="@+id/place_full_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/place_full_icon"
        android:layout_width="188dp"
        android:layout_height="191dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/place_description"
        app:layout_constraintEnd_toStartOf="@+id/place_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_from_full_info"
        app:srcCompat="@drawable/unknown" />

    <TextView
        android:id="@+id/place_description"
        android:layout_width="384dp"
        android:layout_height="306dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="12dp"
        android:maxLines="50"
        android:scrollbars="vertical"
        android:text="@string/place_description"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/review_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_full_icon" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:src="@drawable/add_to_favour"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/place_full_icon"
        app:layout_constraintTop_toBottomOf="@+id/place_title" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:src="@drawable/add_to_visited"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/place_title" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:src="@drawable/make_path"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/place_title" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:src="@drawable/review_btn"
        app:layout_constraintBottom_toTopOf="@+id/place_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/place_full_icon"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Button
        android:id="@+id/review_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="298dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="50dp"
        android:background="#009688"
        android:text="@string/reviews"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_description" />
</androidx.constraintlayout.widget.ConstraintLayout>